# sms-be

./: .gitignore  Makefile  README.md  docker-compose.yaml  env.local  pyproject.toml
apps/common/: enums.py  models.py  validators.py
apps/school/: admin.py  decorators.py  models.py  tests.py  tokens.py  urls.py
apps/school/serializers/: auth.py
apps/school/views/: auth.py
apps/teacher/: models.py  urls.py
apps/teacher/serializers/: auth.py  profiles.py
apps/teacher/views/: __init__.py  auth.py  profiles.py
core/: urls.py
core/django/: base.py
owerflow-core/: pyproject.toml
owerflow-core/src/owerflow_core/: enums.py  models.py  permissions.py  utils.py
owerflow-core/src/owerflow_core/auth/: throttles.py  tokens.py
owerflow-core/src/owerflow_core/tenancy/: resolver.py
templates/public/: base_public.html
users/: admin.py  models.py  urls_public.py  views.py
users/management/commands/: create_school.py  create_user.py
